# glhelper

./: Makefile.in  README.md  TODO  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
include/: glh.h
src/: Makefile.am  Makefile.in  glh_base.h  glh_callback.c  glh_callback.h  glh_decoder.c  glh_decoder.h  glh_error.c  glh_error.h  glh_file.c  glh_file.h  glh_image.c  glh_image.h  glh_shader.c  glh_shader.h  glh_texture.c  glh_texture.h  glh_window.c  glh_window.h
test/: Makefile.am  Makefile.in  test_decoder.c  test_file.c  test_global.c  test_shader.c  test_texture.c
