lib_LIBRARIES = libglh.a
libglh_a_SOURCES = \
	glh_base.h	\
	glh_callback.h	\
	glh_callback.c	\
	glh_error.h	\
	glh_error.c	\
	glh_file.h	\
	glh_file.c	\
	glh_image.h	\
	glh_image.c	\
	glh_decoder.h	\
	glh_decoder.c	\
	glh_shader.h	\
	glh_shader.c	\
	glh_texture.h	\
	glh_texture.c	\
	glh_window.h	\
	glh_window.c	\
	lodepng.h	\
	lodepng.c

AM_CPPFLAGS = -DLODEPNG_NO_COMPILE_DISK
